# FaceLint-Real-Time-Face-Detection-and-Monitoring-System

./: README.md  pyproject.toml
Testes/: test_geometry.py
facelint/: app.py  config.py  detector.py  models.py  preview.py
facelint/resources/: __init__.py  __main__.py
formla/: facelitn.rb
