[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "facelint"
version = "0.3.0"
description = "A macOS menu-bar app that watches your webcam and nudges you when you touch your face — to build the habit of keeping your hands off and improve skin health."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { text = "MIT" }
authors = [{ name = "Darshan" }]
keywords = ["menubar", "macos", "face-touch", "habit", "mediapipe", "webcam", "skin"]
classifiers = [
    "Environment :: MacOS X :: Cocoa",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "mediapipe>=0.10.30",
    "opencv-contrib-python>=4.9",
    "numpy>=1.24",
    "rumps>=0.4.0",
]

[project.scripts]
facelint = "facelint.app:main"

[project.urls]
Homepage = "https://github.com/Darshansrr/facelint"

[tool.hatch.build.targets.wheel]
packages = ["facelint"]